--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PH Tube</title>
-    <!-- tailwind cdn -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- inter google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,10 +45,14 @@
 
       <hr />
 
-      <section></section>
+      <!-- category section -->
+      <section class="py-5">
+        <!-- category items are added by dynamically -->
+      </section>
     </header>
 
-    <!-- script file -->
+    <!-- script files -->
     <script src="./scripts/script.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
