showed the loaded category

--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
             Sort by view
           </button>
           <button
-            class="bg-red-400 px-4 py-2 rounded-md text-base font-medium text-white"
+            class="bg-red-500 px-4 py-2 rounded-md text-base font-medium text-white"
             onclick="location.href = 'blog.html'"
           >
             Blog
           </button>
         </nav>
       </section>
-
       <hr />
-
-      <!-- category section -->
-      <section class="py-5">
-        <!-- category items are added by dynamically -->
-      </section>
     </header>
+
+    <main>
+      <!-- category section -->
+      <section id="category-container" class="py-5 flex justify-center gap-5">
+        <!-- category items are added by dynamically -->
+    </section>
+    </main>
 
     <!-- script files -->
     <script src="./scripts/script.js"></script>
