items of single category added by dynamically

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 
     <main>
       <!-- category section -->
-      <section id="category-container" class="py-5 flex justify-center gap-5">
+      <section id="category-container" class="py-5 flex flex-col md:flex-row items-center justify-center gap-5">
+        <!-- category titles are added by dynamically -->
+      </section>
+
+      <!-- category item section -->
+      <section id="items-container">
         <!-- category items are added by dynamically -->
-    </section>
+      </section>
     </main>
 
     <!-- script files -->
