items sorting added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           </div>
           <button
             class="bg-neutral-300 px-4 py-2 rounded-md text-base font-medium text-black"
+            onclick="sortItems()"
           >
             Sort by view
           </button>
